objects/LTX_Identification__c.object
<CustomObject>
    <fields>
        <fullName>LTX_Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Identifications</relationshipLabel>
        <relationshipName>Identifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LTX_Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LTX_Id_No__c</fullName>
        <label>Id No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LTX_Identification_Type__c</fullName>
        <label>Identification Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passport</fullName>
                </value>
                <value>
                    <fullName>Voter Id</fullName>
                </value>
                <value>
                    <fullName>PAN Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LTX_State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>States</valueSetName>
        </valueSet>
    </fields>
    <label>Identification</label>
    <nameField>
        <displayFormat>IN-{0000}</displayFormat>
        <label>Identification Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Identifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>